# VHH_biosimilar_library_generator

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml  setup_conda.sh
.github/: copilot-instructions.md
.github/instructions/: library_design.instructions.md  predictors.instructions.md
.streamlit/: config.toml
data/: benchmark_vhhs.json  stability_calibration.json
tests/: conftest.py  test_abnativ_compat.py  test_anarci_compat_patch.py  test_app_helpers.py  test_background.py  test_barcodes.py  test_benchmark.py  test_calibration.py  test_checkpoint.py  test_codon_optimizer.py  test_developability.py  test_diversity.py  test_esm_scorer.py  test_fast_mutate_and_progress.py  test_humanness.py  test_library_diagnostics.py  test_library_manager.py  test_library_plan.py  test_mutation_engine.py  test_nanomelt_predictor.py  test_nativeness.py  test_nativeness_caching.py  test_nativeness_edge_cases.py  test_numbering_validation.py  test_original_score_overlay.py  test_orthogonal_scoring.py  test_overlap_selector.py  test_policy_aware_candidates.py  test_position_classifier.py  test_position_policy.py  test_predictors.py  test_rank_diagnostics.py  test_runtime_config.py  test_sequence.py  test_sequence_selector.py  test_session_persistence.py  test_stability.py  test_tags.py  test_two_part_assembly.py
vhh_library/: __init__.py  _abnativ_compat.py  _abnativ_init_cli.py  background.py  barcodes.py  benchmark.py  calibration.py  checkpoint.py  codon_optimizer.py  developability.py  diversity.py  esm_scorer.py  humanness.py  library_manager.py  library_plan.py  mutation_engine.py  nativeness.py  numbering.py  orthogonal_scoring.py  position_classifier.py  position_policy.py  runtime_config.py  sequence.py  stability.py  tags.py  two_part_assembly.py  utils.py  visualization.py
vhh_library/components/: __init__.py  overlap_selector.py  sequence_selector.py
vhh_library/components/frontend/: index.html
vhh_library/components/frontend_overlap/: index.html
vhh_library/predictors/: __init__.py  abnativ.py  base.py  esm2_prior.py  nanomelt.py
