[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vhh-biosimilar-library-generator"
version = "0.1.0"
description = "VHH (nanobody) biosimilar variant library generator with ESM-2 stability prediction, AbNatiV nativeness scoring, codon optimisation, and LC-MS/MS barcoding."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # NOTE: numba, llvmlite, and hmmer are intentionally excluded here —
    # they are installed via conda in environment.yml.  numba/llvmlite
    # avoid macOS build failures with iomp5 and cmake; hmmer is pinned
    # to 3.3.x via bioconda because the pip hmmer package has no 3.3.x
    # release and HMMER 3.4 produces output that BioPython's SearchIO
    # parser cannot fully handle (None HSP coordinates that break ANARCI).
    # See the README for details.
    "pandas>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "streamlit>=1.33",
    "scipy>=1.10",
    "anarci>=2026.2",
    "python-codon-tables>=0.1.10",
    "dnachisel>=3.2",
    "torch>=2.0",
    "fair-esm>=2.0",
    "abnativ",
    "umap-learn>=0.5",
    "plotly>=5.0",
]

[project.scripts]
vhh-init = "vhh_library._abnativ_init_cli:main"

[project.optional-dependencies]
ml = [
    # torch and fair-esm are now core dependencies; this extra is kept only
    # so that existing ``pip install ".[ml]"`` commands do not fail.
]
nativeness = [
    # abnativ is now a core dependency; this extra is kept only
    # so that existing ``pip install ".[nativeness]"`` commands do not fail.
]
nanomelt = [
    "nanomelt",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
all = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# app.py requires early setup calls (matplotlib.use, warnings.filterwarnings)
# before remaining imports, which legitimately triggers E402.
"app.py" = ["E402"]

[tool.setuptools.packages.find]
include = ["vhh_library*"]
